test(runtime): cover native batching selection